[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "replit-ffmpeg"
version = "0.1"
description = "Installs FFmpeg for you on Replit."
keywords = ["replit", "ffmpeg", "opus", "youtube-dl"]
authors = [
  { name = "AWeirdDev", email = "aweirdscratcher@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "rich",
  "requests"
]

[project.scripts]
replit-ffmpeg = "replit_ffmpeg.installer:main"

[project.urls]
"Homepage" = "https://github.com/AWeirdScratcher/replit-ffmpeg"
"Bug Tracker" = "https://github.com/AWeirdScratcher/replit-ffmpeg/issues"